docs(keycloak-app): document keycloak/java/opts/append
univention/dev/projects/keycloak/keycloak-app#273